2008-05-22  Inge Wallin  <inge@lysator.liu.se>

	Cleaning: m_parent is not a parent, so call it something else.
	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate::m_parent):
	renamed into m_widget

2008-05-21  Simon Schmeisser  <mail_to_wrt@gmx.de>

    * src/geoshape/GeoShapeFactory.cpp

    - removed some obsolete code, fixed includes a bit

    * src/geoshape/GeoShape.cpp

    - updated to match current state of the api
    - fixed some includes
	
    *  src/geoshape/CMakeLists.txt

    - includes and link dirs are now set correctly
    - linking is disabled at the moment because of linker error

    * src/CMakeLists.txt

    - enabled building the flake shape

2008-05-21  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * marble/src/lib/TinyWebBrowser.cpp (loadResource)

    Krazy fix, "/" -> '/'.

2008-05-21  Torsten Rahn  <rahn@kde.org> 

    * TextureTile.cpp:
    * GeoPainter.{cpp,h}:

    - Don't crash when zooming in very fast or 
      when typing something into the search field on 
      high zoom.

    * src/plugins/marble/overviewmap/MarbleOverviewMap.cpp:

    - Add center indicator


2008-05-21  Torsten Rahn  <rahn@kde.org> 

    * src/lib/SphericalScanlineTextureMapper.cpp:

    - Don't interpolate during TextureMapping at all 
      if we select Print Quality for still map rendering.

2008-05-21  Torsten Rahn  <rahn@kde.org> 

    * src/lib/TextureTile.{cpp,h}:

    - Fixing two bugs with one patch:

    - The Smear effect which was due to the 1 bit
      images being read via the jumptable8.
    - The slow timedemo benchmark due to 
      the Atlas View using the pixelValue method.

    This fixes the performance entirely ( it's back to 
    14 fps for me ).

2008-05-21  Patrick Spendrin  <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataPolyStyle{.h,.cpp}
    * src/lib/geodata/CMakeLists.txt
    
    Add PolyStyle
    
2008-05-21  Patrick Spendrin  <ps_ml@gmx.de>

    * src/lib/geodata/CMakeLists.txt
    
    Add LineStyle to CMakeLists.txt
    